add logs to controller
fix path of file