@@ -1,9 +1,15 @@
 package com.hackathon.hnservice;
 
+import org.slf4j.ILoggerFactory;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.util.ResourceUtils;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.io.File;
+import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
@@ -18,6 +24,9 @@ public class Controller {
     final long DEFAULT_SLEEP = 100;
     private final SleepyRestClient sleepyRestClient;
 
+
+    private final Logger logger = LoggerFactory.getLogger(this.getClass().getName());
+
     public Controller(SleepyRestClient sleepyRestClient) {
         this.sleepyRestClient = sleepyRestClient;
     }
@@ -28,26 +37,27 @@ public class Controller {
         iterations = iterations == null ? DEFAULT_ITERATIONS : iterations;
         sleep = sleep == null ? DEFAULT_SLEEP : sleep;
 
-        System.out.printf("New request: %s, %d%n", Thread.currentThread(), Thread.currentThread().threadId());
+        logger.debug(String.format("New request: %s, %d%n", Thread.currentThread(), Thread.currentThread().threadId()));
         try {
-            InputStream is = Files.newInputStream(Paths.get("/Users/dudif/IdeaProjects/hn-service/src/main/resources/file.json"));
+            File is = ResourceUtils.getFile("classpath:file.json");
+            FileInputStream fileInputStream = new FileInputStream(is);
             MessageDigest sha256 = MessageDigest.getInstance("SHA-256");
 
+            logger.debug("start processing");
             for (int i = 0; i < iterations; i++) {
-                sha256.digest(is.readAllBytes());
+                sha256.digest(fileInputStream.readAllBytes());
             }
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        } catch (NoSuchAlgorithmException e) {
+            logger.debug("end processing");
+        } catch (IOException | NoSuchAlgorithmException e) {
             throw new RuntimeException(e);
         }
 
-        System.out.printf("start sleep for: %d%n", sleep);
+        logger.debug(String.format("start sleep for: %d%n", sleep));
         Thread.sleep(sleep);
-        System.out.printf("end sleep");
+        logger.debug("end sleep");
 
-        System.out.printf("End request: %d\n\n", Thread.currentThread().threadId());
-        return String.format("Iterations number: %d - done with thread.id %d", iterations, Thread.currentThread().getId());
+        logger.debug(String.format("End request: %d\n\n", Thread.currentThread().threadId()));
+        return String.format("Iterations number: %d - done with thread.id %d", iterations, Thread.currentThread().threadId());
     }
 
     @GetMapping("/test")
@@ -62,9 +72,7 @@ public class Controller {
             for (int i = 0; i < iterations; i++) {
                 sha256.digest(is.readAllBytes());
             }
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        } catch (NoSuchAlgorithmException e) {
+        } catch (IOException | NoSuchAlgorithmException e) {
             throw new RuntimeException(e);
         }
 
@@ -75,5 +83,4 @@ public class Controller {
         System.out.printf("End request: %d\n\n", Thread.currentThread().threadId());
         return String.format("Iterations number: %d - done with thread.id %d", iterations, Thread.currentThread().threadId());
     }
-
 }
